projects/compiler/test/typechecker/funcdecl/error_export_bad_scope.out
Error at %FILE_NAME%:2:3
Unexpected token 'export':
  |    export func foo(self) {}
       ^
