projects/compiler/test/typechecker/funcdecl/error_export_bad_scope.abra
type Foo {
  export func foo(self) {}
}